ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "challenge.domain.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flinks-service
                port:
                  number: 80
